--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-resumen.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-resumen.xhtml
@@ -29,7 +29,7 @@
                 <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.direccion}"/>
 
                 <p:outputLabel value="Indicativo teléfono: " styleClass="etiquetaFormulario"/>
-                <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.telefono}"/>
+                <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.indicativo}"/>
 
                 <p:outputLabel value="Teléfono: " styleClass="etiquetaFormulario"/>
                 <p:outputLabel value="#{MbFormEstablecimiento.identificacionSeleccionada.telefono}"/>
