--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-resumen.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/componente/cpt-formulario-resumen.xhtml
@@ -37,6 +37,9 @@
                 <p:outputLabel value="Dirección sede principal: " styleClass="etiquetaFormulario"/>
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.direccion}"/>
 
+                <p:outputLabel value="Indicativo sede principal: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.indicativo}"/>
+
                 <p:outputLabel value="Teléfono sede principal: " styleClass="etiquetaFormulario"/>
                 <p:outputLabel value="#{MbFormGrupoEmpresa.identificacionSeleccionada.telefono}"/>
 
