--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-resumen.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-resumen.xhtml
@@ -34,6 +34,9 @@
                 <p:outputLabel value="Dirección: " styleClass="etiquetaFormulario"/>
                 <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.direccion}"/>
 
+                <p:outputLabel value="Indicativo: " styleClass="etiquetaFormulario"/>
+                <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.indicativo}"/>
+
                 <p:outputLabel value="Teléfono: " styleClass="etiquetaFormulario"/>
                 <p:outputLabel value="#{MbFormUnidadLegal.identificacionSeleccionada.telefono}"/>
 
