27-Commit Ajustes visuales.

--- a/GrupoEmpresarial-war/web/index.xhtml
+++ b/GrupoEmpresarial-war/web/index.xhtml
@@ -6,8 +6,8 @@
     <h:body>   
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content" >
-                <p:outputLabel value="Linea de Investigación Grupos Empresariales" styleClass="titulo-center-h2" style="color: #B6014C;"/>
-                <p>Proyecto de linea de investigación para el DANE sobre los grupos empresariales en Colombia.</p>
+                <h2 class="titulo-center-h2">Proyecto de linea de investigación para el DANE sobre los grupos empresariales en Colombia.</h2>
+                <p>El proyecto....(en construcción.)</p>
            <!--lista:unica-seleccion label="Lista frutas:" bean="#{practica.cboFrutas}" habilitarTest="true"/-->
            <!--p:outputLabel value="#{request.contextPath} -" />
            <p:outputLabel value="#{root} -"/>
