--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/componente/cpt-formulario-tamano.xhtml
@@ -27,11 +27,11 @@
             <p:message for="txtPersoTemporal" />
 
             <p:outputLabel value="Hombres ocupados: " styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtNumeroHombres" value="#{MbFormEstablecimiento.tamanoSeleccionado.hombresOcupados}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Los Hombres ocupados son requeridos." label="Hombres ocupados"/>
+            <p:inputText id="txtNumeroHombres" value="#{MbFormEstablecimiento.tamanoSeleccionado.hombresOcupados}"  styleClass="valorEtiquetaFormulario" required="false" requiredMessage="Los Hombres ocupados son requeridos." label="Hombres ocupados"/>
             <p:message for="txtNumeroHombres" />
 
             <p:outputLabel value="Mujeres ocupadas: " styleClass="etiquetaFormulario"/>
-            <p:inputText id="txtNumeroMujeres" value="#{MbFormEstablecimiento.tamanoSeleccionado.mujeresOcupadas}"  styleClass="valorEtiquetaFormulario" required="true" requiredMessage="Las Mujeres ocupadas son requeridos." label="Mujeres ocupadas"/>
+            <p:inputText id="txtNumeroMujeres" value="#{MbFormEstablecimiento.tamanoSeleccionado.mujeresOcupadas}"  styleClass="valorEtiquetaFormulario" required="false" requiredMessage="Las Mujeres ocupadas son requeridos." label="Mujeres ocupadas"/>
             <p:message for="txtNumeroMujeres" />
 
             <p:outputLabel value="Activos: ($) *" styleClass="etiquetaFormulario"/>
