--- a/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-formulario-establecimiento.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/establecimiento/itz-formulario-establecimiento.xhtml
@@ -7,7 +7,7 @@
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
                 <h:form>
-                    <h3 style="text-align: center;">FORMULARIO DE PERFILAMIENTO DE ESTABLECIMIENTOS</h3>
+                    <h3 class="titulo-center-h3">FORMULARIO DE ACTUALIZACIÓN DEL ESTABLECIMIENTO</h3>
                     <p:growl id="gwFormEstablecimiento" sticky="true" showDetail="true" life="6000" />
 
                     <p:wizard flowListener="#{MbFormEstablecimiento.onFlowProcess}" backLabel="anterior" nextLabel="siguiente">
