--- a/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-tamano.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/unidad-legal/componente/cpt-formulario-tamano.xhtml
@@ -35,11 +35,11 @@
             <p:message for="txtPersonalCotizante" />
 
             <p:outputLabel value="Número de hombres: " styleClass="etiquetaFormulario" />
-            <p:inputText id="txtNumeroHombres" value="#{MbFormUnidadLegal.tamanoSeleccionado.hombresOcupados}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Número de hombres es requerido." label="Número de hombres"/>
+            <p:inputText id="txtNumeroHombres" value="#{MbFormUnidadLegal.tamanoSeleccionado.hombresOcupados}" styleClass="valorEtiquetaFormulario" required="false" requiredMessage="El Número de hombres es requerido." label="Número de hombres"/>
             <p:message for="txtNumeroHombres" />
 
             <p:outputLabel value="Número de mujeres: " styleClass="etiquetaFormulario" />
-            <p:inputText id="txtNumeroMujeres" value="#{MbFormUnidadLegal.tamanoSeleccionado.mujeresOcupadas}" styleClass="valorEtiquetaFormulario" required="true" requiredMessage="El Número de mujeres es requerido." label="Número de mujeres"/>
+            <p:inputText id="txtNumeroMujeres" value="#{MbFormUnidadLegal.tamanoSeleccionado.mujeresOcupadas}" styleClass="valorEtiquetaFormulario" required="false" requiredMessage="El Número de mujeres es requerido." label="Número de mujeres"/>
             <p:message for="txtNumeroMujeres" />
 
             <p:outputLabel value="Activo: ($) *" styleClass="etiquetaFormulario" />
