--- a/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
+++ b/GrupoEmpresarial-war/web/plantilla/plantilla.xhtml
@@ -22,7 +22,8 @@
                     <ui:include src="encabezado.xhtml" />
                 </p:layoutUnit>
 
-                <p:layoutUnit position="west" size="250" header="#{nerv['menu.title']}" collapsible="true">
+                <!--p:layoutUnit position="west" size="250" header="#{nerv['menu.title']}" collapsible="true"-->
+                <p:layoutUnit position="west" size="250" collapsible="false">
                     <ui:include src="menu.xhtml" />
                 </p:layoutUnit>
 
