--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-formulario-grupo-empresa.xhtml
@@ -7,7 +7,7 @@
         <ui:composition template="/plantilla/plantilla.xhtml">
             <ui:define name="content">
                 <h:form>
-                    <h3 style="text-align: center;">FORMULARIO DE PERFILAMIENTO DEL GRUPO EMPRESARIAL</h3>
+                    <h3 class="titulo-center-h3">FORMULARIO DE ACTUALIZACIÓN DEL GRUPO EMPRESARIAL</h3>
                     <p:growl id="gwFormGrupoEmpresa" sticky="true" showDetail="true" life="6000" />
 
                     <p:wizard flowListener="#{MbFormGrupoEmpresa.onFlowProcess}" backLabel="anterior" nextLabel="siguiente"  >
