--- a/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
+++ b/GrupoEmpresarial-war/web/interfaz/grupo-empresa/itz-informe-grupo-empresa.xhtml
@@ -8,7 +8,7 @@
             <ui:define name="content">
                 <h:form id="frmInfoGrupoEmpresa" style="height: 88%;" >
                     <p:growl id="msnInforGruEmp" showDetail="true" />
-                    <h3 class="titulo-center-h3">REPORTE DE PERFILAMIENTO DEL GRUPO EMPRESARIAL</h3>
+                    <h3 class="titulo-center-h3">INFORMACIÓN DEL GRUPO EMPRESARIAL</h3>
                     <div class="ui-grid ui-grid-responsive">
                         <div class="ui-grid-row">
                             <div class="ui-grid-col-12">
@@ -36,19 +36,20 @@
                         </div>
                         <div class="ui-grid-row">
                             <div class="ui-grid-col-12">
-                                <!--h4 class="titulo-left-h3">Actualizar información desde archivo XLS</h4>
+                                <h4 class="titulo-left-h3">Actualizar información desde archivo XLS</h4>
                                 <p>En esta sección el usuario puede descargar un archivo XLS, que contiene la información del grupo empresarial, la cual podra
                                     actualizar de forma local y al terminar subir el archivo para actualizar los datos.</p>
                                 <p:commandButton id="btnGenerarXlsGrupoEmpresa" value="Generar Excel" ajax="false" 
                                                  actionListener="#{MbEscribirExcelGrupoEmpresa.generarArchivoXls(nerv['plantilla.grupoEmpresarial.path'],
-                                                  nerv['plantilla.grupoEmpresarial.archivo'], MbLogin.usuarioLogueado.idIdentificacion,'GRUPO')}"
-                                onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
-                   <p:fileDownload value="#{MbEscribirExcelGrupoEmpresa.file}" />
-               </p:commandButton>
-               <p>Subir el archivo con la ifnromación del grupo empresarial diligenciada para actualizar los datos.</p>
-               <ui:include src="../utilidades/cpt-cargar-archivo-xls.xhtml">
-                   <ui:param name="frmPadre" value="frmInfoGrupoEmpresa" />
-               </ui:include-->
+                                                                   nerv['plantilla.grupoEmpresarial.archivo'], MbLogin.usuarioLogueado.idIdentificacion,'GRUPO')}"
+                                                 onclick="PrimeFaces.monitorDownload(start, stop);" icon="ui-icon-arrowthick-1-s">
+                                    <p:fileDownload value="#{MbEscribirExcelGrupoEmpresa.file}" />
+                                </p:commandButton>
+                                <p>Subir el archivo con la ifnromación del grupo empresarial diligenciada para actualizar los datos.</p>
+                                <ui:include src="../utilidades/cpt-cargar-archivo-xls.xhtml">
+                                    <ui:param name="frmPadre" value="frmInfoGrupoEmpresa" />
+                                    <ui:param name="formulario" value="GRUPO" />
+                                </ui:include>
                             </div>
                         </div>
                     </div>
